0.0.2.0
  - Supports base-4.12