@@ -1,2 +1,3 @@
 0.0.2.0
   - Supports base-4.12
+  - Added 'partition' function
